@@ -1,12 +1,0 @@
-;; -*- mode: scheme -*-
-;; Sample Kahua configuration file
-;;
-
-(make <kahua-config>
-  :sockbase             "unix:##SOCKET_BASE_DIR##"
-  :working-directory    "##localstatedir##"
-  :static-document-path "##KAHUA_STATICDIR##"
-  :static-document-url  "/kahua"
-  :timeout-mins         60
-  :userconf-file        "##localstatedir##/user.conf"
-  )
