@@ -1,5 +1,0 @@
-;; -*- mode: scheme -*-
-;; Sample user configuration file
-
-(("steel" "cRDtpNCeBiql5KOQsKVyrA0sAiA=" (creator))
- ("sussman" "gf6L/odXbD7LIkJvjleEc4KRes8=" (creator)))
